# Autoware-LKAS

./: README.md
autoware.ai/autoware_files/data/tf/: tf.launch
autoware.ai/autoware_files/launch/: single_control.launch  single_localization.launch  single_planning.launch  single_sensing.launch
autoware.ai/autoware_files/lgsvl_file/launch/: lgsvl_bridge.launch  map_loader.launch  single_control.launch  single_detection.launch  single_localization.launch  single_planning.launch  single_sensing.launch
autoware.ai/autoware_files/lgsvl_file/parameter/: lgsvl_pure_pursuit.yaml
autoware.ai/autoware_files/lgsvl_file/vehicle/: SingleLiDAR_Autoware.config
autoware.ai/autoware_files/params/: lgsvl_pure_pursuit.yaml
autoware.ai/autoware_files/rviz/: ndt_exp.rviz
autoware.ai/autoware_files/vector_map/CubeTown/: dtlane.csv  lane.csv  node.csv  point.csv
autoware.ai/autoware_files/vector_map/intersection_left_turn/: dtlane.csv  lane.csv  point.csv
autoware.ai/autoware_files/vector_map/sanfrancisco/: lane.csv  node.csv
autoware.ai/autoware_files/vector_map/testbed_2/: node.csv
autoware.ai/autoware_files/vector_map/testbed_right_map/: lane.csv  node.csv
autoware_files/lgsvl/: testbed.rviz
autoware_files/lgsvl/my_launch/: double_detection.launch  double_sensing.launch  single_detection.launch  single_localization.launch  single_sensing.launch  test.launch  triple_control.launch  triple_gnss_localization.launch  triple_planning.launch
autoware_files/lgsvl_file/: lgsvl_rviz.rviz  triple_lidar_rviz.rviz
autoware_files/lgsvl_file/launch/: map_loader.launch  single_detection.launch  single_localization.launch  single_sensing.launch
autoware_files/lgsvl_file/my_launch/: double_lidar_localization.launch  double_planning.launch  test.launch  triple_detection.launch  triple_sensing.launch
autoware_files/rviz/: ndt_exp.rviz
autoware_files/vector_map/testbed_right_map/: dtlane.csv  point.csv
rubis_ws/src/rubis_autorunner/: CMakeLists.txt
rubis_ws/src/rubis_pkg/: CMakeLists.txt  package.xml
rubis_ws/src/rubis_pkg/include/: gnss_localizer.h  lkas_combiner.h  pcd_clipper.h
rubis_ws/src/rubis_pkg/launch/: fake_traffic_signal_generator.launch  gnss_localizer.launch  lgsvl_traffic_signal_test.launch  lkas_combiner.launch  pcd_clipper.launch
rubis_ws/src/rubis_pkg/src/: gnss_localizer.cpp  gnss_localizer_node.cpp  lane_keeping_module.py  lkas_combiner.cpp  pcd_clipper.cpp  pcd_clipper_node.cpp
rubis_ws/src/test_package/: CMakeLists.txt  package.xml
rubis_ws/src/test_package/launch/: TF_test.launch  (+5 more)
setup/: cv_bridgeConfig.cmake  image_geometryConfig.cmake  install.sh  source.sh
spiraline_ws/: .gitignore
spiraline_ws/cfg/: acc_config.yaml  autoware_config.yaml  default_config.yaml  ndt_wcet_config.yaml  other_wcet_config.yaml  progress_ndt_config.yaml  progress_ours_config.yaml  res_t_config.yaml  rviz_config.rviz  wcet_config.yaml
spiraline_ws/cfg/backup/: progress_ours_config.yaml
spiraline_ws/cfg/traffic/: borregas_intersection.yaml  borregas_trafficlight.yaml
spiraline_ws/data/: ndt_exp.rviz
spiraline_ws/exp/: acc_exp.py  ndt_wcet.py  other_wcet.py  plot.py  progress_ndt.py  progress_ours.py  res_t_exp.py  wcet_exp.py
spiraline_ws/launch/: gnss_mapping.launch  lgsvl_bridge.launch  map_loader.launch  single_control.launch  single_detection.launch  single_localization.launch  single_planning.launch  single_sensing.launch
spiraline_ws/points_map/: HarshCubeTown.pcd
spiraline_ws/src/: CMakeLists.txt
spiraline_ws/src/autorunner/: CMakeLists.txt  package.xml
spiraline_ws/src/autorunner/cfg/cubetown_autorunner/: accuracy_autorunner.yaml  cubetown_autorunner.yaml  default_autorunner.yaml  ndt_wcet_autorunner.yaml  other_wcet_autorunner.yaml  progress_ndt_autorunner.yaml  progress_ours_autorunner.yaml  res_t_autorunner.yaml  wcet_autorunner.yaml
spiraline_ws/src/autorunner/include/cubetown_autorunner/: cubetown_autorunner.h
spiraline_ws/src/autorunner/launch/: cubetown_autorunner.launch
spiraline_ws/src/autorunner/scripts/cubetown_autorunner/: 1_sensing_acc.launch  1_sensing_default.launch  1_sensing_ndt_wcet.launch  1_sensing_other_wcet.launch  1_sensing_progress_ndt.launch  1_sensing_progress_ours.launch  1_sensing_res_t.launch  1_sensing_wcet.launch  2_localization.launch  3_detection.launch  4_planning.launch  5_control.launch  _cubetown_autorunner_1_sensing.launch  _cubetown_autorunner_2_localization.launch  _cubetown_autorunner_3_detection.launch  _cubetown_autorunner_4_planning.launch  _cubetown_autorunner_5_control.launch  terminate.sh
spiraline_ws/src/autorunner/scripts/lgsvl_triple_lidar_autorunner/: lgsvl_triple_lidar_step1.launch
spiraline_ws/src/autorunner/src/cubetown_autorunner/: cubetown_autorunner.cpp
spiraline_ws/src/lkas/: CMakeLists.txt  package.xml
spiraline_ws/src/lkas/cfg/: svl.yaml
spiraline_ws/src/lkas/include/: lkas_combiner.h  twist_combiner.h
spiraline_ws/src/lkas/launch/: twist_combiner.launch
spiraline_ws/src/lkas/src/: lkas.py  lkas_combiner.cpp  lkas_combiner_node.cpp  ndt_config_publisher.py  twist_combiner.cpp  twist_combiner_node.cpp
spiraline_ws/src/sensor_republisher/: CMakeLists.txt  package.xml
spiraline_ws/src/sensor_republisher/include/: gnss_calibrator.h  gnss_localizer.h
spiraline_ws/src/sensor_republisher/launch/: camera_republisher.launch  gnss_calibrator.launch  gnss_localizer.launch  gnss_republisher.launch  lidar_republisher.launch
spiraline_ws/src/sensor_republisher/src/: gnss_calibrator.cpp  gnss_calibrator_node.cpp  gnss_localizer.cpp
spiraline_ws/svl_script/: BorregasBase.yaml  CubeTownBase.py  CubeTownBase.yaml  CubeTown_Obstacle.py  CubeTown_Obstacle.yaml
spiraline_ws/svl_script/svl/: 3_CubeTown.py  4_CubeTown_NDTLKAS.py  4_CubeTown_NDTLKAS.yaml
spiraline_ws/util/: WCET_viz.py  acc_viz.py  center_offset.py  driving_progress_logger.py  driving_progress_viz.py  exec_calculator.py  lc_viz.py  ndt_stat_logger.py  other_wcet_viz.py
spiraline_ws/vector_map/CubeTown/: dtlane.csv  lane.csv  node.csv  point.csv
spiraline_ws/vector_map/SanFrancisco/: dtlane.csv  point.csv
(+117 files in other folders)
