<?xml version="1.0"?>
<package format="2">
  <name>sensor_republisher</name>
  <version>0.0.0</version>
  <description>Sensor republisher nodes</description>
  
  <maintainer email="jwhan@rubis.snu.ac.kr">Jongwoo Han</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
<build_depend>geometry_msgs</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>jsk_recognition_msgs</build_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>nmea_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>
</package>